<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/beige"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    	
	<LinearLayout 
	    
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context="com.example.receptapp.NewRecipeActivity$PlaceholderFragment"
	    android:id="@+id/newRecipeLayout" >
	
	    <EditText
	        android:id="@+id/edit_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@color/white"
	        android:hint="@string/name_recipe"
	        android:maxWidth="245dp"
	        android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:paddingLeft="12dp"
	        android:singleLine="true"
	        android:width="245dp" >
	
	        <requestFocus />
	    </EditText>
	
	    <TextView
	        android:id="@+id/recipe_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/recipe_name"
	        android:textSize="18sp" />
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:paddingTop="10dp" >
	
	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
	
	            <EditText
	                android:id="@+id/edit_ingredient"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:background="@color/white"
	                android:hint="@string/edit_ingredient"
	                android:maxWidth="170dp"
	                android:paddingBottom="7dp"
	                android:paddingTop="7dp"
	                android:paddingLeft="12dp"
	                android:singleLine="true"
	                android:width="170dp"
	                android:layout_marginRight="5dp" >
	
	            </EditText>
	
			    <TextView
			        android:id="@+id/ingredient"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/ingredient"
			        android:textSize="18sp" />
	            				    
				<LinearLayout
					android:id="@+id/newLayout"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="vertical">
					
				</LinearLayout>
	
	        </LinearLayout>
	
	        
	       	<LinearLayout
	            android:id="@+id/layout"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
	
	            <EditText
	                android:id="@+id/edit_amount"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:background="@color/white"
	                android:hint="@string/edit_amount"
	                android:inputType="numberDecimal"
	                android:maxLines="1"
	                android:maxWidth="70dp"
	                android:paddingBottom="7dp"
	                android:paddingTop="7dp"
	                android:paddingLeft="12dp"
	                android:singleLine="true"
	                android:width="70dp"
	                 >
	
	            </EditText>
	
	            <TextView
	                android:id="@+id/amount"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/amount"
	                android:textSize="18sp" />
	            
	            <LinearLayout
	                android:id="@+id/amount_layout"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:orientation="vertical">
	                
	            </LinearLayout>
	        </LinearLayout>
	
	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
	
	            <Spinner
	                android:id="@+id/unitSpinner"
	                android:layout_marginLeft="5dp"
	                android:layout_width="wrap_content"
	                android:layout_height="0dip"
	                android:layout_weight="1"
	                />
	            
	            <TextView android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/recipe_unit"
	                android:textSize="18sp">
	                
	            </TextView>
	            <LinearLayout
	                android:id="@+id/spinnerLayout"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:orientation="vertical">
	                
	            </LinearLayout>
	        </LinearLayout>
	    </LinearLayout>
	
	    <Button
	        android:id="@+id/add_ingredient"
	        android:layout_width="50dp"
	        android:layout_height="wrap_content"
	        android:background="@color/red"
	        android:textColor="@color/white"
	        android:textSize="25sp"
	        android:paddingTop="0dp"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="15dp"
	        android:text="@string/button_add" />
	
	    <EditText
	        android:id="@+id/edit_instructions"
	        android:layout_width="wrap_content"
	        android:scrollbars="vertical"
	        android:layout_height="wrap_content"
	        android:maxHeight="200dp"
	        android:gravity="top|left"
	        android:background="@color/white"
	        android:hint="@string/edit_instructions"
	        android:maxWidth="245dp"
	        android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
	        android:width="245dp"
            android:layout_marginTop="5dp">

	    </EditText>
	
	    <TextView
	        android:id="@+id/instructions"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/recipe_instructions"
	        android:textSize="18sp" />
	
	    <Button
	        android:id="@+id/button_save"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@color/red"
	        android:layout_marginTop="5dp"
	        android:onClick="writeToFile"
	        android:textColor="@color/white"
	        android:paddingTop="0dp"
	        android:paddingLeft="5dp"
	        android:paddingRight="5dp"
	        android:text="@string/button_save" />
	    
	    <TextView
	        android:id="@+id/test"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        />
	   
	</LinearLayout>
	</ScrollView>